fix: 프로필, 포트폴리오 수정 정보 조회 수정
